--- a/Taskman/MainWin.glade
+++ b/Taskman/MainWin.glade
@@ -870,11 +870,9 @@
   </object>
   <object class="GtkDialog" id="TaskPropertyDialog">
     <property name="can_focus">False</property>
-    <property name="type">popup</property>
     <property name="modal">True</property>
-    <property name="type_hint">dialog</property>
-    <property name="skip_taskbar_hint">True</property>
-    <property name="deletable">False</property>
+    <property name="destroy_with_parent">True</property>
+    <property name="type_hint">normal</property>
     <property name="transient_for">MainWindow</property>
     <child internal-child="vbox">
       <object class="GtkBox" id="dialog-vbox2">
