--- a/Taskman/MainWin.glade
+++ b/Taskman/MainWin.glade
@@ -1050,7 +1050,7 @@
                     <property name="reorderable">True</property>
                     <property name="sort_column_id">1</property>
                     <child>
-                      <object class="GtkCellRendererToggle" id="cellrenderertoggle1">
+                      <object class="GtkCellRendererToggle" id="TaskDialog CatList HasCatToggle">
                         <property name="cell_background_gdk">#000000000000</property>
                       </object>
                       <attributes>
