--- a/Taskman/MainWin.glade
+++ b/Taskman/MainWin.glade
@@ -746,7 +746,7 @@
                           </attributes>
                         </child>
                         <child>
-                          <object class="GtkCellRendererText" id="cellrenderertext1"/>
+                          <object class="GtkCellRendererText" id="CatStatusNameRender"/>
                           <attributes>
                             <attribute name="text">1</attribute>
                           </attributes>
@@ -1050,19 +1050,13 @@
                     <property name="reorderable">True</property>
                     <property name="sort_column_id">1</property>
                     <child>
-                      <object class="GtkCellRendererToggle" id="TaskDialog CatList HasCatToggle">
-                        <property name="cell_background_gdk">#000000000000</property>
-                      </object>
+                      <object class="GtkCellRendererToggle" id="TaskDialog CatList HasCatToggle"/>
                       <attributes>
                         <attribute name="active">2</attribute>
                       </attributes>
                     </child>
                     <child>
-                      <object class="GtkCellRendererText" id="cellrenderertext2">
-                        <property name="cell_background_gdk">#000000000000</property>
-                        <property name="background_gdk">#000000000000</property>
-                        <property name="foreground_gdk">#000000000000</property>
-                      </object>
+                      <object class="GtkCellRendererText" id="cellrenderertext2"/>
                       <attributes>
                         <attribute name="text">1</attribute>
                       </attributes>
