--- a/Taskman/MainWin.glade
+++ b/Taskman/MainWin.glade
@@ -97,7 +97,7 @@
         <property name="tooltip" translatable="yes">Marcar como activa la tarea seleccionada</property>
         <property name="stock_id">gtk-media-play</property>
       </object>
-      <accelerator key="space"/>
+      <accelerator key="space" modifiers="GDK_CONTROL_MASK"/>
     </child>
     <child>
       <object class="GtkAction" id="actStop">
