--- a/Taskman/MainWin.glade
+++ b/Taskman/MainWin.glade
@@ -146,6 +146,7 @@
       <object class="GtkAction" id="actSaveAs">
         <property name="stock_id">gtk-save-as</property>
       </object>
+      <accelerator key="s" modifiers="GDK_SHIFT_MASK | GDK_CONTROL_MASK"/>
     </child>
     <child>
       <object class="GtkAction" id="actLoad">
@@ -159,7 +160,6 @@
         <property name="short_label" translatable="yes">_Nuevo</property>
         <property name="stock_id">gtk-new</property>
       </object>
-      <accelerator key="n" modifiers="GDK_CONTROL_MASK"/>
     </child>
     <child>
       <object class="GtkAction" id="actExit">
@@ -195,6 +195,7 @@
         <property name="tooltip" translatable="yes">Editar tarea seleccionada</property>
         <property name="icon_name">preferences-desktop-peripherals</property>
       </object>
+      <accelerator key="Return" modifiers="GDK_CONTROL_MASK"/>
     </child>
   </object>
   <object class="GtkApplicationWindow" id="MainWindow">
@@ -370,6 +371,15 @@
                       <object class="GtkMenuItem" id="menu_remove_task">
                         <property name="use_action_appearance">True</property>
                         <property name="related_action">actRemove</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="use_underline">True</property>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkMenuItem" id="menu_edit_task">
+                        <property name="use_action_appearance">True</property>
+                        <property name="related_action">actEditTask</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="use_underline">True</property>
