--- a/Taskman/MainWin.glade
+++ b/Taskman/MainWin.glade
@@ -719,47 +719,54 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <child>
-              <object class="GtkTreeView" id="TaskView">
-                <property name="height_request">299</property>
+              <object class="GtkScrolledWindow" id="scrolledwindow1">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
-                <property name="hscroll_policy">natural</property>
-                <property name="expander_column">TaskIdColumn</property>
-                <property name="reorderable">True</property>
-                <property name="search_column">2</property>
-                <property name="enable_tree_lines">True</property>
-                <child internal-child="selection">
-                  <object class="GtkTreeSelection" id="TaskSelection"/>
-                </child>
+                <property name="shadow_type">in</property>
+                <property name="min_content_height">300</property>
                 <child>
-                  <object class="GtkTreeViewColumn" id="TaskIdColumn">
-                    <property name="sizing">fixed</property>
-                    <property name="fixed_width">80</property>
-                    <property name="title" translatable="yes">Id</property>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkTreeViewColumn" id="TaskStatusColumn">
-                    <property name="sizing">fixed</property>
-                    <property name="fixed_width">100</property>
-                    <property name="title" translatable="yes">Estado</property>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkTreeViewColumn" id="TaskNameColumn">
-                    <property name="resizable">True</property>
-                    <property name="sizing">autosize</property>
-                    <property name="title" translatable="yes">Nombre</property>
-                    <property name="clickable">True</property>
+                  <object class="GtkTreeView" id="TaskView">
+                    <property name="height_request">299</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="hscroll_policy">natural</property>
+                    <property name="expander_column">TaskIdColumn</property>
                     <property name="reorderable">True</property>
-                    <property name="sort_indicator">True</property>
-                    <property name="sort_column_id">2</property>
+                    <property name="search_column">2</property>
+                    <property name="enable_tree_lines">True</property>
+                    <child internal-child="selection">
+                      <object class="GtkTreeSelection" id="TaskSelection"/>
+                    </child>
+                    <child>
+                      <object class="GtkTreeViewColumn" id="TaskIdColumn">
+                        <property name="sizing">fixed</property>
+                        <property name="fixed_width">80</property>
+                        <property name="title" translatable="yes">Id</property>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkTreeViewColumn" id="TaskStatusColumn">
+                        <property name="sizing">fixed</property>
+                        <property name="fixed_width">100</property>
+                        <property name="title" translatable="yes">Estado</property>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkTreeViewColumn" id="TaskNameColumn">
+                        <property name="sizing">autosize</property>
+                        <property name="title" translatable="yes">Nombre</property>
+                        <property name="clickable">True</property>
+                        <property name="reorderable">True</property>
+                        <property name="sort_indicator">True</property>
+                        <property name="sort_column_id">2</property>
+                      </object>
+                    </child>
                   </object>
                 </child>
               </object>
               <packing>
-                <property name="resize">False</property>
-                <property name="shrink">True</property>
+                <property name="resize">True</property>
+                <property name="shrink">False</property>
               </packing>
             </child>
             <child>
